<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="E_State" Id="{e2061f9e-ae92-419e-aa16-ce9624917eb9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_State :
(
	idle,
	reset,
	moveAbs,
	moveRel
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>